--- a/butterfly/views/error.ejs
+++ b/butterfly/views/error.ejs
@@ -1,5 +1,5 @@
 <% layout('./layout/page.ejs') %>
-
+<title>Error</title>
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
