--- a/butterfly/views/layout/page.ejs
+++ b/butterfly/views/layout/page.ejs
@@ -14,13 +14,13 @@
                 <a class="nav-link" href="/">Butterfly</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/cethosia_cyane">Cethosia Cyane</a>
+                <a class="nav-link" href="/butterflies/cethosia_cyane">Cethosia Cyane</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/greta_oto">Greta Oto</a>
+                <a class="nav-link" href="/butterflies/greta_oto">Greta Oto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/papilio_memnon">Papilio Memnon</a>
+                <a class="nav-link" href="/butterflies/papilio_memnon">Papilio Memnon</a>
             </li>
             </ul>
             <ul class="navbar-nav navbar-right">
