--- a/butterfly/views/layout/page.ejs
+++ b/butterfly/views/layout/page.ejs
@@ -7,13 +7,22 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <div class="container-fluid">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/">Butterfly</a>
+                <a class="nav-link " href="/">Butterfly</a>
             </li>
-            <li class="nav-item">
+
+            
+            <% menu.forEach(butterflies => { %>
+                <li class="nav-item">
+                  <a class="nav-link" href="/butterflies/<%= butterflies.nick %>"><%= butterflies.title %></a>
+                </li>
+            <% }) %>
+            
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/butterflies/cethosia_cyane">Cethosia Cyane</a>
             </li>
             <li class="nav-item">
@@ -26,7 +35,7 @@
             <ul class="navbar-nav navbar-right">
             <li>
             <a class="nav-link" href="">Log In</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
