--- a/butterfly/views/layout/page.ejs
+++ b/butterfly/views/layout/page.ejs
@@ -35,7 +35,7 @@
 
         <ul class="navbar-nav navbar-right">
             <li>
-            <a class="nav-link" href="">Log In</a>
+            <a class="nav-link" href="/logreg">Log In</a>
             </li>
         </ul>
     </div>
