--- a/butterfly/views/index.ejs
+++ b/butterfly/views/index.ejs
@@ -1,6 +1,15 @@
 <% layout('./layout/page.ejs') %>
   <body>
+
+
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <p>Счетчик: <%= counter %></p>
+    <p>Счетчик: <%= counter %></p>    
+
+    <% if(user) {%>
+      // Случай залогиненного пользователя
+    <% }else{ %>
+      // Случай не залогиненного пользователя
+    <% }
+      
   </body>
