--- a/butterfly/views/index.ejs
+++ b/butterfly/views/index.ejs
@@ -7,9 +7,9 @@
     <p>Счетчик: <%= counter %></p>    
 
     <% if(user) {%>
-      // Случай залогиненного пользователя
+      <h3>Welcome to butterfly</h3>
     <% }else{ %>
-      // Случай не залогиненного пользователя
-    <% }
+      <h3>Don't have an account? Let's Sign Up</h3>
+    <% } %>
       
   </body>
