--- a/butterfly/views/butterfly.ejs
+++ b/butterfly/views/butterfly.ejs
@@ -2,6 +2,6 @@
   <body>
     <h1><%= title %></h1>
     <img src="<%= picture %>" alt=""/>
-    <h4>About this butterfly: <%=desc%></h4>
+    <h4>About butterfly: <%=desc%></h4>
   </body>
 
