--- a/butterfly/views/index.ejs
+++ b/butterfly/views/index.ejs
@@ -7,7 +7,7 @@
     <p>Счетчик: <%= counter %></p>    
 
     <% if(user) {%>
-      <h3>Welcome to butterfly</h3>
+      <h3>Hello!</h3>
     <% }else{ %>
       <h3>Don't have an account? Let's Sign Up</h3>
     <% } %>
